--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.9
-  # riverpod: ^2.4.9
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
