--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   firebase_utils: ^1.0.1
+  shared_preferences: ^2.2.2
   
 
 dev_dependencies:
